before refactoring custom.css.scss

--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -1,6 +1,7 @@
 <%= provide(:title, "Notify an absence")%>
   <div class="row">
-    <div class="span6 offset3">
+    <!-- <div class="span6 offset3"> -->
+    <div class="center hero-unit">
       <h3> Notify an absence </h3>
       <%= form_for(@cancellation) do |f| %>
         <%= f.label :name, "Student Name" %>
