--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,5 @@
 <%# provide :title, 'Home' %>
-<h1>Makeup Scheduler</h1>
-<p>This application helps to manage lessons cancellations</p>
+<div class="center hero-unit">
+  <h1>Makeup Scheduler</h1>
+  <p>This application helps to manage lessons cancellations</p>
+</div>
