--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,8 +4,8 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About", '#'%></li>
-      <li><%= link_to "Help", static_pages_help_path %></li>
+      <li><%= link_to "About", static_pages_about_path%></li>
+      <!-- <li><%= link_to "Help", static_pages_help_path %></li> -->
     </ul>
   </nav>
 </footer>
