finish layouts and routes

--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -19,7 +19,7 @@
         <%= f.label :end_time, "End time" %>
         <%= f.text_field :end_time  %>
         <br><br>
-        <%= f.submit "Send", class: "btn"%>
+        <%= f.submit "Send", class: "btn btn-primary"%>
 
       <% end %>
     </div>
