--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -1,9 +1,11 @@
 <%= provide(:title, "Notify an absence")%>
+<h3> Notify an absence </h3>
+
   <div class="row">
-    <!-- <div class="span6 offset3"> -->
-    <div class="center hero-unit">
-      <h3> Notify an absence </h3>
+    <div class="span6 offset3">
+
       <%= form_for(@cancellation) do |f| %>
+        <%= render 'shared/error_messages' %>
         <%= f.label :name, "Student Name" %>
         <%= f.text_field :name %>
 
@@ -20,7 +22,7 @@
         <%= f.text_field :end_time  %>
         <br><br>
         <%= f.submit "Send", class: "btn btn-primary"%>
-
       <% end %>
+      
     </div>
   </div> 
