--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -166,3 +166,14 @@ input {
   @extend .control_group;
   @extend .error;
 }
+
+/* Cancellation index and show */
+
+.makeup{ 
+  border: 1px solid #acacac;
+  border-radius: 7px;
+  background-color: #f5f5f5;
+  padding: 8px;
+  margin-bottom: 8px;
+  text-align: center;
+}
