--- a/app/views/cancellations/index.html.erb
+++ b/app/views/cancellations/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Cancellations#index</h1>
-<p>Find me in app/views/cancellations/index.html.erb</p>
+<% provide :title, "Available makepus"%>
+<div class="span6 offset3">
+  <h2>Available makeups</h2>
+
+  <% @cancellation.each do |cancellation| %>
+    <div class="makeup">
+      <p><b>Date <%= cancellation.date %> - </b> <b>Name</b> <%= cancellation.name %></p>
+      <p><b>Instrument:</b> <%= cancellation.instrument %> <b>from</b> <%= cancellation.start_time %> <b>to</b> <%= cancellation.end_time %></p>
+    </div>
+  <% end %>
+
+</div>
