--- a/app/views/cancellations/show.html.erb
+++ b/app/views/cancellations/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "#{@cancellation.name} #{@cancellation.date}")%>
-<div class="span7 offset2">
+<div>
 <!-- <div class="row"> -->
   <h2>Thank you for notifying us your absence!</h2>
   <div class="makeup">
