--- a/app/views/cancellations/show.html.erb
+++ b/app/views/cancellations/show.html.erb
@@ -12,5 +12,19 @@
       <b>End time: </b><%= @cancellation.end_time %><br>
     </p>
   </div>
-      <%= link_to "Exit" , "#", id: "exit", class: "btn btn-primary" %>
+      <%= link_to "Exit", "#", id: "exit", class: "btn btn-primary" %>
 </div>
+
+
+<script type="text/javascript">
+
+function close_window(url){
+  var newWindow = window.open('', '_self', ''); //open the current window
+    window.close(url);
+ }
+
+$("#exit").click(function(event){
+  event.preventDefault();
+  close_window();
+})
+</script>>
