--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -6,6 +6,8 @@
 
       <%= form_for(@cancellation) do |f| %>
         <%= render 'shared/error_messages' %>
+
+
         <%= f.label :name, "Student Name" %>
         <%= f.text_field :name %>
 
@@ -16,10 +18,7 @@
         <%= f.text_field :date %>
 
         <%= f.label :start_time, "Start time" %>
-        <%= f.text_field :start_time %>
-
-        <%= f.label :end_time, "End time" %>
-        <%= f.text_field :end_time  %>
+        <%= f.select(:start_time, options_for_select(times)) %>
         <br><br>
         <%= f.submit "Send", class: "btn btn-primary"%>
 
