--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -2,11 +2,11 @@
   <div class="error_explanation">
     <div class="alert alert-error">
       Your submission has <%= pluralize(@cancellation.errors.count, 'error')%>
-    </div>
       <ul>
         <% @cancellation.errors.full_messages.each do |msg| %>
-          <li>* <%= msg %> </li>
+          <li> <%= msg %> </li>
         <% end %>
       </ul>
+    </div>
   </div>
 <% end %>
