comparing dates in Javascript (for date validation)

--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -31,8 +31,9 @@
   $(document).ready(function(){
     $("#new_cancellation").submit(function(event){
       event.preventDefault();
+
       // the dateTime when the user submit the form
-      var now = new Date();     
+      var notificationDateTime = new Date();     
 
       // the date of the absence (entered by the user)
       var date = $("#cancellation_date").val();
@@ -41,12 +42,19 @@
       // the hour of the absence (enters b the user)
       var time = $("select").val(); 
       var timeParts = time.match(/(\d{1,2}):(\d{2})\s/)
+      // dateTime of the absence
+      var absenceDateTime = new Date("20" + dateParts[2], (dateParts[0] - 1), dateParts[1], timeParts[1], timeParts[2]);
 
-      var absenceDate = new Date(dateParts[2], (dateParts[1] - 1), dateParts[0], timeParts[1], timeParts[2]);
-      alert(absenceDate);
+
+      console.log(notificationDateTime + " " + absenceDateTime);
+
+      // comparing the dates
+      if (notificationDateTime.getTime() < absenceDateTime.getTime()) {
+        alert("Before");  
+      }
+      else { 
+        alert("After");
+      }
     })
   })
-
-
-
   </script>
