--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -41,7 +41,7 @@
 
       // the hour of the absence (enters b the user)
       var time = $("select").val(); 
-      var timeParts = time.match(/(\d{1,2}):(\d{2})\s/)
+      var timeParts = time.match(/(\d{2}):(\d{2})/)
       // dateTime of the absence
       var absenceDateTime = new Date("20" + dateParts[2], (dateParts[0] - 1), dateParts[1], timeParts[1], timeParts[2]);
 
@@ -49,7 +49,7 @@
       console.log(notificationDateTime + " " + absenceDateTime);
 
       // comparing the dates
-      if (notificationDateTime.getTime() < absenceDateTime.getTime()) {
+      if (notificationDateTime < absenceDateTime) {
         alert("Before");  
       }
       else { 
