--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -9,13 +9,13 @@
 
 
         <%= f.label :name, "Student Name" %>
-        <%= f.text_field :name, value: "Juan Ortiz" %>
+        <%= f.text_field :name %>
 
         <%= f.label :instrument, "Instrument" %>
-        <%= f.text_field :instrument, value: "Guitar" %>
+        <%= f.text_field :instrument %>
 
         <%= f.label :date, "Date" %>
-        <%= f.text_field :date, placeholder: "mm/dd/yy", value: "5/1/14" %>
+        <%= f.text_field :date, placeholder: "mm/dd/yy"%>
 
         <%= f.label :start_time, "Start time" %>
         <%= f.select(:start_time, options_for_select(times)) %>
