added javascript tag to cancellations show template

--- a/app/views/cancellations/show.html.erb
+++ b/app/views/cancellations/show.html.erb
@@ -13,3 +13,5 @@
   </div>
       <%= link_to "Exit", "#", id: "exit", class: "btn btn-primary" %>
 </div>
+
+<%= javascript_include_tag "cancellations" %>
