--- a/app/views/cancellations/show.html.erb
+++ b/app/views/cancellations/show.html.erb
@@ -11,7 +11,7 @@
       <b>Start time: </b><%= @cancellation.start_time %><br>
     </p>
   </div>
-      <%= link_to "Exit", "#", id: "exit", class: "btn btn-primary" %>
+      <%= link_to "Exit", root_path, id: "exit", class: "btn btn-primary" %>
 </div>
 
 <%= javascript_include_tag "cancellations" %>
