corrected the tests

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, 'Home' %>
+<%# provide :title, 'Home' %>
 <div class="center hero-unit">
   <h1>Makeup Scheduler</h1>
   <p>This application helps to manage lessons cancellations</p>
