--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -15,11 +15,11 @@
         <%= f.label :instrument, "Instrument" %>
         <%= f.text_field :instrument, :value => "Guitar" %>
 
-        <%= f.label :date, "Date" %>
-        <%= f.text_field :date, placeholder: "mm/dd/yy", :value => "5/5/14"%>
+        <%#= f.label :date, "Date" %>
+        <%#= f.text_field :date, placeholder: "mm/dd/yy", :value => "5/5/14"%>
 
-        <%= f.label :start_time, "Start time" %>
-        <%= f.select(:start_time, options_for_select(times)) %>
+        <%#= f.label :start_time, "Start time" %>
+        <%#= f.select(:start_time, options_for_select(times)) %>
         <br><br>
         <%= f.submit "Send", class: "btn btn-primary"%>
 
