--- a/app/views/cancellations/_cancellation.html.erb
+++ b/app/views/cancellations/_cancellation.html.erb
@@ -1,6 +1,6 @@
 <div class="makeup">
-  <p><b>Date: <%= cancellation.date %></b></p> 
+  <p><b>Date: <%#= cancellation.date %></b></p> 
   <p><b>Name: </b><%= cancellation.name %></p>
-  <p>Instrument: <b><%= cancellation.instrument.capitalize %></b> at <b><%= cancellation.start_time %></b></p>
+  <p>Instrument: <b><%#= cancellation.instrument.capitalize %></b> at <b><%= cancellation.start_at %></b></p>
   <%= link_to "delete", cancellation, method: :delete, data: { confirm: "Are you sure?"} %>
 </div>
