removed old tests

--- a/app/views/cancellations/show.html.erb
+++ b/app/views/cancellations/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "#{@cancellation.name}")%>
+<% provide(:title, "#{@cancellation.start_at}")%>
 
 <div class="span6 offset3 center">
   <h2>Thank you for notifying us your absence!</h2>
