--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
       <%= link_to "Makeup Scheduler", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Notify an absence", new_cancellation_path %></li>
+          <li><%= link_to "Notify an Absence", new_cancellation_path %></li>
+          <li><%= link_to "Available Makeups", cancellations_path %></li>
           <li><%= link_to "Home",              root_path %></li>
           <li><%= link_to "Help",              help_path %></li>
         </ul>
