--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
   <h1>Makeup Scheduler</h1>
   <p>This application helps to manage lessons cancellations</p>
   <div>
-    <%= link_to "Nofify an absence", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
+    <%= link_to "Nofify an Absence", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
     <%= link_to "Available Makeups", cancellations_path, class: "btn btn-info new-cancellation-button" %>
   </div>
 </div>
