--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -9,13 +9,13 @@
         
 
         <%= f.label :name, "Student Name" %>
-        <%= f.text_field :name, :value => "Juan Ortiz" %>
+        <%= f.text_field :name %>
 
         <%= f.label :instrument, "Instrument" %>
-        <%= f.text_field :instrument, :value => "Guitar" %>
+        <%= f.text_field :instrument, placeholder: "e.g., guitar" %>
 
-        <%= f.label :date, "Date" %>
-        <%= f.text_field :date, placeholder: "mm/dd/yy", :value => "#{(Time.now + 1.day).strftime("%m/%d/%y")}"%>
+        <%= label_tag :date %>
+        <%= text_field_tag :date, nil, placeholder: "mm/dd/yy" %>
 
         <%= f.label :start_at, "Start time" %>
         <%= f.select(:start_at, options_for_select(times)) %>
