better title in show template

--- a/app/views/cancellations/show.html.erb
+++ b/app/views/cancellations/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "#{@cancellation.start_at}")%>
+<% provide(:title, "#{@cancellation.instrument} #{@cancellation.start_at.strftime("%m-%d-%y")}")%>
 
 <div class="span6 offset3 center">
   <h2>Thank you for notifying us your absence!</h2>
