--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,8 @@
 <html>
 <head>
   <title><%= full_title(yield :title) %></title>
-  <%= stylesheet_link_tag    "application", media: "all", 
-                                            "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
 </head>
@@ -20,3 +19,6 @@
     </div>
   </body>
 </html>
+
+
+<!-- ,"data-turbolinks-track" => true -->
