--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,12 +1,12 @@
 <% if @cancellation.errors.any? %>
-  <div class="error_explanation">
+  <div id="error_explanation">
     <div class="alert alert-error">
       Your submission has <%= pluralize(@cancellation.errors.count, 'error')%>
+    </div>
       <ul>
-      <% @cancellation.errors.full_messages.each do |message| %>
-        <li> <%= message %> </li>
+      <% @cancellation.errors.full_messages.each do |msg| %>
+        <li>* <%= msg %> </li>
       <% end %>
       </ul>
     </div>
-  </div>
 <% end %>
