--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,27 @@
 <% provide :title, "Sign up"%>
 
 <h1>Sign up</h1>
+
+<div class="row">
+  <div class="span6 offset3">
+
+    <%= form_for(@user) do |f| %>
+
+      <%= render 'shared/user_error_messages'%>
+
+      <%= f.label :name%>
+      <%= f.text_field :name, placeholder: "name" %>
+
+      <%= f.label :email%>
+      <%= f.text_field :email, placeholder: "email" %>
+
+      <%= f.label :password %>
+      <%= f.text_field :password, placeholder: "password" %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.text_field :password_confirmation, placeholder: "confirmation"  %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
