sign in and out

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <aside class="span4">
-    <section></section>>
+    <section></section>
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %> 
