--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,10 +4,26 @@
       <%= link_to "Makeup Scheduler", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Notify an Absence", new_cancellation_path %></li>
-          <li><%= link_to "Available Makeups", cancellations_path %></li>
-          <li><%= link_to "Home",              root_path %></li>
-          <li><%= link_to "Help",              help_path %></li>
+          <% if signed_in? %>
+            <li><%= link_to "Notify an Absence", new_cancellation_path %></li>
+            <li><%= link_to "Available Makeups", cancellations_path %></li>
+            <li><%= link_to "Users", "#" %></li>
+            <li id="fat-menu" class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Account <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Settings", "#" %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to "Logout", logout_path, method: "delete" %>
+                </li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to "Sign in", signin_path %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
