--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,4 @@
 @import "bootstrap";
-@import "bootstrap";
 
 /* mixins, variables, etc. */
 
@@ -180,13 +179,21 @@ input {
 
 /* Cancellation index and show */
 
-.makeup{ 
+.makeup { 
   border: 1px solid #acacac;
   border-radius: 7px;
   background-color: #f5f5f5;
-  padding: 8px;
+  padding: 15px 0 8px;
   margin-bottom: 8px;
   text-align: center;
+
+  h4 {
+    margin: 0;
+  }
+
+  p {
+    margin-bottom: 0;
+  }
 }
 
 .center {
