changed the update method

--- a/app/views/cancellations/edit.html.erb
+++ b/app/views/cancellations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span6 offset3">
+  <div class="center span6 offset3">
     <div class="makeup">
       <h4><%= @cancellation.instrument %></h4>
       <p>
